--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_application_1
+name: linkedinpostsaver
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
@@ -7,9 +7,10 @@ environment:
   sdk: '>=3.2.4 <4.0.0'
 
 dependencies:
-  firebase_core: ^2.27.0
   flutter:
     sdk: flutter
+  path_provider: ^2.1.3
+  clipboard: 0.1.3
 
 dev_dependencies:
   flutter_test:
